# meeting-notes

./: .gitignore  README.md  pyproject.toml  transcribe_canary.py  transcribe_canary_no_cuda_graphs.py  transcribe_canary_small_model.py
configs/: asr.yaml  llm.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu
scripts/: bootstrap.sh  download_models.sh  nemo_quick_transcribe.py  run_nemo_asr.ps1
src/crisper_whisper/: __init__.py
src/meeting_notes/: cli.py
src/meeting_notes/pipeline/: asr_engine.py  audio_utils.py  io_utils.py  stitcher.py  summarizer.py
src/meeting_notes/prompts/: __init__.py  meeting_notes_system.txt  meeting_notes_user.txt
